SOS-1470 Fixing the alignment of the Lock Icon (EE Only)

--- a/themes/so-theme/overwrite/css/so-skin-ee.css
+++ b/themes/so-theme/overwrite/css/so-skin-ee.css
@@ -388,3 +388,9 @@ $red: #8F0920;
 		@include border-radius(0);
 	}
 }
+
+.ie7 {
+	.asset-details .version {
+		zoom: 1;
+	}
+}
